[package]
name = "strobengine"
version = "0.1.0"
edition = "2024"

[lib]
name = "_strobengine"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with
# minimum Python version 3.8
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py38"] }
# pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"] }
