[package]
name = "strobengine"
version = "0.1.0"
edition = "2024"

[lib]
name = "_strobengine"
# "cdylib" is necessary to produce a shared library for Python to import from.
# "rlib" is needed for `cargo test` to build the test harness.
crate-type = ["cdylib", "rlib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with
# minimum Python version 3.9
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
reqwest = { version = "0.13.4" }
tokio = { version = "1.53.0", features = ["sync", "time", "rt", "rt-multi-thread"] }
# pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"] }
